Only start akonadi asynchronously on KDE 4.6.2.

Revises cfa404b7188e4c26bddbc9579728f6d25f8cd214 to hopefully fix
the bug seen on fedora.

Please re-test this on 4.6.2 on fedora too. Unfortunately that's the
best I can do because I can't reproduce the issue.

BUG: 268120